# babash

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.portainer.yml  docker-compose.yml  pyproject.toml  stack.env
src/babash/: __init__.py  settings.py  types_.py
src/babash/client/: documents.py  fs.py  images.py  memory.py  modes.py  tool_prompts.py  tools.py
src/babash/client/bash_state/: __init__.py  bash_state.py  execute.py  persistence.py  shell_process.py
src/babash/client/bash_state/parser/: __init__.py
src/babash/client/encoder/: __init__.py
src/babash/client/file_ops/: diff_edit.py  search_replace.py
src/babash/client/mcp_server/: __init__.py  __main__.py  chat.py  helpers.py  instance.py  resources.py  server.py  state.py
src/babash/client/mcp_server/tools/: __init__.py  files.py  sessions.py  shell.py
src/babash/client/repo_ops/: file_stats.py  path_score.py  repo_context.py
src/babash/client/tools/: __init__.py  context.py  dispatch.py  init_ops.py  read_ops.py  write_ops.py
src/babash_cli/: anthropic_client.py  cli.py  openai_client.py  openai_utils.py
src/wcgw/: types_.py
src/wcgw/client/: modes.py  tool_prompts.py  tools.py
src/wcgw/client/bash_state/: bash_state.py  execute.py  file_whitelist.py  persistence.py  shell_process.py
src/wcgw/client/encoder/: __init__.py
src/wcgw/client/mcp_server/: __init__.py  server.py
src/wcgw_cli/: anthropic_client.py  openai_client.py
tests/: conftest.py  test_bash_parser.py  test_bash_parser_complex.py  test_bg_commands.py  test_diff_edit_regressions.py  test_documents.py  test_edit.py  test_file_range_tracking.py  test_fs.py  test_helpers.py  test_images.py  test_mcp_server.py  test_persistence.py  test_readfiles.py  test_repo_ops.py  test_roster.py  test_shell.py  test_terminal_renderer.py  test_tool_surface.py  test_tools.py  tool_dispatch.py
