[project]
authors = [{ name = "Aman Rusia", email = "gapypi@arcfu.com" }]
name = "babash"
version = "5.6.2"
description = "Shell and coding agent MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "rich>=13.8.1",
    "pexpect>=4.9.0",
    "pyte>=0.8.2",
    "pydantic>=2.9.2",
    "tokenizers>=0.21.0",
    "pygit2>=1.16.0",
    "syntax-checker==0.4.0",
    "psutil>=7.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-bash>=0.23.3",
    "mcp>=1.23.0",
    "wcmatch>=10.1",
]

[project.urls]
Homepage = "https://github.com/airaneel/babash"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/babash"]

[tool.hatch.build.targets.wheel.sources]
"src/babash" = "babash"

[project.scripts]
babash = "babash:mcp_server"
babash_mcp = "babash:mcp_server"

[tool.uv]
default-groups = []

[dependency-groups]
types = [
    "mypy>=1.11.2",
    "types-toml>=0.10.8.20240310",
    "types-pexpect>=4.9.0.20241208",
    "types-psutil>=7.0.0.20250218",
    "line-profiler>=4.2.0",
]
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.25.3",
]
dev = [
    "autoflake",
    "ipython>=8.12.3",
    "gunicorn>=23.0.0",
    "line-profiler>=4.2.0",
    "pyright>=1.1.407",
]

[tool.pytest.ini_options]
addopts = "--cov=babash --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
