[project]
authors = [{ name = "Aman Rusia", email = "gapypi@arcfu.com" }]
name = "babash"
version = "5.6.2"
description = "A terminal MCP server: persistent, isolated shells for coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "pexpect>=4.9.0",
    "pyte>=0.8.2",
    "psutil>=7.0.0",
    "mcp>=1.23.0",
    # Already arrives under mcp, which is built on it — but the tool signatures
    # import Field directly to put descriptions and bounds in the input schema,
    # and a package should declare what it imports rather than lean on someone
    # else's transitive pin.
    "pydantic>=2.0",
    # PDF text extraction. 2MB, BSD, and — unusually — zero transitive
    # dependencies. PyMuPDF is faster but AGPL, which would relicense babash.
    "pypdf>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/airaneel/babash"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/babash"]

[tool.hatch.build.targets.wheel.sources]
"src/babash" = "babash"

[project.scripts]
babash = "babash:mcp_server"
babash_mcp = "babash:mcp_server"

[tool.uv]
default-groups = []

[dependency-groups]
types = [
    "mypy>=1.11.2",
    "types-pexpect>=4.9.0.20241208",
    "types-psutil>=7.0.0.20250218",
]
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.25.3",
]
dev = [
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
addopts = "--cov=babash --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
